# medisolveai_assignment

./: .dockerignore  .env.development.example  .env.test.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.codex/: auth.json  history.jsonl  version.json
.github/: PULL_REQUEST_TEMPLATE.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
Assignment1/: README.md  alembic.ini  main_admin.py  main_gateway.py  main_patient.py
Assignment1/app/core/: config.py  exceptions.py
Assignment1/app/db/: __init__.py  models.py  session.py
Assignment1/app/gateway/: health.py  proxy.py
Assignment1/app/services/: admin_appointments.py  admin_catalog.py  patient_directory.py  patient_reservations.py  slot_rules.py
Assignment1/db/: init.sql
Assignment1/docker/compose/: Dockerfile  docker-compose.yml
Assignment1/docs/: AI활용기록.md
Assignment1/migrations/: env.py
Assignment1/migrations/versions/: 0001_create_tables.py  0002_seed_sample_data.py
Assignment1/tests/: conftest.py
Assignment1/tests/integration/: conftest.py  test_gateway_proxy.py
Assignment1/tests/performance/: test_reservations_p95.py
Assignment2/: README.md
Assignment2/reports/: randomizer_report.md
Assignment2/src/algorithms/: __init__.py  randomizer.py
Assignment2/tests/: test_randomizer.py  test_randomizer_stats.py
specs/001-medisolve-backend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/medisolveai-backend-assignment/: spec.md
task_report/: Task1.md  Task1_test_report.md  Task2_test_report.md
(+28 files in other folders)
